tests/parsing/smtlib/mcil/errors/266_declare-enum-sort_unclosed.mcil
(declare-enum-sort enum (A B C) error)